--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
   overflow-x: hidden;
+  --scrollbar-width: 17px;
+  --clampRacine: clamp(6px, 2vw, 200px);
+  /* scrollbar-gutter: stable; */
+  /* scrollbar-width: var(--scrollbar-width); */
 }
+
 
 a {
   font-weight: 500;
@@ -57,9 +62,6 @@ button:focus-visible {
 
 
 /* Responsive utilities */
-.hidden{
-  display: none;
-}
 
 @media (min-width: 768px) {
   .md\:hiddenBeyond {
